--- a/package.json
+++ b/package.json
@@ -10,16 +10,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.16.2",
+    "@heroicons/react": "^2.0.17",
     "@prisma/client": "^4.11.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
     "next": "^13.2.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.3",
+    "react-loader-spinner": "^5.3.4",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-brand-colors": "^0.3.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
