--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@trpc/server": "^10.18.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "formik": "^2.2.9",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.3",
     "react-loader-spinner": "^5.3.4",
@@ -38,6 +40,7 @@
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
