--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@clerk/nextjs": "^4.16.2",
     "@heroicons/react": "^2.0.17",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.13.0",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.28.0",
@@ -20,6 +22,10 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/ratelimit": "^0.4.2",
+    "@upstash/redis": "^1.20.4",
+    "@vercel/analytics": "^1.0.0",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
@@ -34,6 +40,7 @@
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-brand-colors": "^0.3.3",
+    "u": "^0.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -51,7 +58,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
