--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "-": "^0.0.1",
     "@clerk/nextjs": "^4.16.2",
     "@heroicons/react": "^2.0.17",
-    "@prisma/client": "^4.13.0",
+    "@mantine/hooks": "^6.0.19",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -29,21 +30,25 @@
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
+    "framer-motion": "^10.16.0",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.3",
+    "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-brand-colors": "^0.3.3",
     "u": "^0.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -58,7 +63,8 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.13.0",
+    "prisma": "^5.1.1",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
