--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^6.0.19",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
+    "@radix-ui/react-popover": "^1.0.6",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.28.0",
