--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-error-boundary": "^4.0.3",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
