--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@/lib/*": ["./src/lib/*"],
       "@/utils/*": ["./src/utils/*"],
       "@/prisma/*": ["./prisma/client.js/*"],
+      "@/server/*": ["./src/server/*"],
       "@/style/*": ["./src/style/*"],
       "@/types/*": ["./src/types/*"],
       "@/myFormik": ["./src/lib/myFormik/index.ts"],
