--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@upstash/ratelimit": "^0.4.2",
-    "@upstash/redis": "^1.20.4",
+    "@upstash/redis": "^1.22.0",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.0",
+    "nanoid": "^4.0.2",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
