--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.16.0",
     "nanoid": "^4.0.2",
     "next": "^13.4.12",
     "next-themes": "^0.2.1",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
