--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
 		"paths": {
 			"~/*": ["./src/*"],
 			"@/components/*": ["./src/components/*"],
+			"@/context/*": ["./src/context/*"],
 			"@/ui": ["./src/components/ui/index.ts"],
 			"@/hooks": ["./src/hooks/index.ts"],
 			"@/config/*": ["./src/config/*"],
@@ -40,7 +41,7 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		// "./src/types/**/*.d.ts",
+		"./src/types/**/*.d.ts",
 		"./prettier.config.cts"
 	],
 	"exclude": ["node_modules"]
